1999-10-24  Harri Porten  <porten@kde.org>

	* KJSContext: "argument" property works now (adopted model
	proposed in the	latest spec draft from April 98)

1999-10-20  Harri Porten  <porten@kde.org>

	* math_object.cpp: seperated Math object and put in sample E and
	sin() properties.

1999-10-17  Harri Porten  <porten@kde.org>

	* implemented argument passing for declared function

1999-10-16  Harri Porten  <porten@kde.org>

	* object.cpp: enter execution context on function calls 
	
	* return values work, finally. Strip them off from Completions

1999-10-15  Harri Porten  <porten@kde.org>

	* first steps for calls of user declared functions

	* nodes.cpp: Unary + and - 

1999-10-12  Harri Porten  <porten@kde.org>

	* fixed lots of -Wall warnings

1999-10-10  Harri Porten  <porten@kde.org>

	* initial import of sources at the KDE II meeting

